--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
+                        <li><a href='diff_pw_17_8.html'>Unified diff core:dev vs beta:origin/pw_17_8</a></li>
+
                         <li><a href='diff_refact_usb_for_core_2021_8.html'>Unified diff core:dev vs beta:origin/refact_usb_for_core_2021_8</a></li>
 
                         <li><a href='diff_regulation_mode.html'>Unified diff core:dev vs beta:origin/regulation_mode</a></li>
